<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <!-- Views -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <CheckBox
            android:id="@+id/inkrementCheckbox"
            android:checked="false"
            android:text="@string/incrementCheckboxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <!-- Checked -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <RadioGroup
            android:id="@+id/checkedRadioButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/checkedRadioSuccessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updateCheckedRadioButtonSuccessText"/>

            <RadioButton
                android:id="@+id/checkedRadioFailedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updateCheckedRadioButtonFailedText"/>

        </RadioGroup>

    </LinearLayout>

    <!-- Comment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/commentField"
            android:hint="@string/updateCommentFieldHint"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>