<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

        </android.support.v7.widget.Toolbar>

        <!-- The main content view     -->
        <RelativeLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <!-- The navigation drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/drawerPane"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <LinearLayout
            android:id="@+id/navigationLayout"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Profile Box -->

            <RelativeLayout
                android:id="@+id/profileBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimaryDark"
                android:padding="8dp" >

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_launcher"
                    android:layout_marginTop="15dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/avatar"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MediaDB Viewer"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginTop="4dp"
                        android:text="The spirit of media"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </LinearLayout>

            </RelativeLayout>

            <!-- List of Actions (pages) -->
            <ListView
                android:background="@color/navigationDrawerBackground"
                android:id="@+id/navList"
                android:layout_width="280dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_below="@+id/profileBox"
                android:choiceMode="singleChoice"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/navigationDrawerBackground">

                <TextView
                    android:text="@string/app_version"
                    android:textSize="15sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/appVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

    <LinearLayout
        android:layout_width="280dp"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:id="@+id/filterLayout"
        android:layout_gravity="end"
        android:background="@color/filterBarBackgroundColor">

        <ScrollView
            android:id="@+id/filterBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Interface für Suche eines Films -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/movieSearchField"
                        android:textColor="@color/filterTextColor"
                        android:textColorHint="@color/filterHintColor"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:singleLine="true"
                        android:hint="@string/movieSearchFieldHint"/>

                    <EditText
                        android:textColor="@color/filterTextColor"
                        android:textColorHint="@color/filterHintColor"
                        android:id="@+id/movieActorSearchField"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:singleLine="true"
                        android:hint="@string/movieActorSearchFieldHint"/>

                </LinearLayout>

                <!-- Interface für Sortierung der List-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:paddingLeft="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:textColor="@color/filterTextColor"
                        android:textStyle="bold"
                        android:text="@string/movieSortText"/>

                    <Spinner
                        android:id="@+id/movieDirectionSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:paddingBottom="4sp"/>

                    <Spinner
                        android:id="@+id/movieCategorySpinner"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6sp"
                        android:paddingBottom="4sp"/>

                </LinearLayout>

                <!-- Tabelle mit allen einfachen Filtern -->
                <TableLayout
                    android:id="@+id/spinnerTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"> <!-- streckt die zweite Spalte-->
                </TableLayout>

                <LinearLayout
                    android:id="@+id/complexFilterRootLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </LinearLayout>

        </ScrollView>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/filterBar"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/movieFilterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/movieFilterButtonText"/>
            <Button
                android:id="@+id/movieResetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/movieResetButtonText"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>